# Time-Series-Omega

./: AUDIT.md  README.md  pyproject.toml
scripts/: train.py
src/time_series_omega/: __init__.py
src/time_series_omega/coverage/: __init__.py  block_conformal.py
src/time_series_omega/data/: datasets.py
src/time_series_omega/losses/: regularizers.py
src/time_series_omega/models/: residual.py  sff_omega.py  ssm.py
src/time_series_omega/robustness/: __init__.py  diffeo.py
src/time_series_omega/segmentation/: __init__.py  mdl.py
src/time_series_omega/training/: pipeline.py
src/time_series_omega/transforms/: calendar.py  time_warp.py  value_transform.py
src/time_series_omega/utils/: module_lipschitz.py
