[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-omega"
version = "0.1.0"
description = "Reference implementation of the SFF-Ω framework"
authors = [{name = "Research Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.23",
]

[project.scripts]
sff-omega-train = "scripts.train:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["time_series_omega", "time_series_omega.data", "time_series_omega.transforms", "time_series_omega.losses", "time_series_omega.models", "time_series_omega.training", "time_series_omega.utils"]
